handsontable/src/styles/components/plugins/_nested-headers.scss
// Handsontable Nested Headers

@mixin output {
  .handsontable {
    thead th.htRowspanHeader + th {
      border-inline-start-width: 0;
    }

    thead th.htRowspanHeader {
      height: auto;
    }

    &.htRowHeaders thead tr:last-child th:first-child {
      border-end-start-radius: 0;
    }

    .ht_clone_inline_start .htCore tbody tr:first-child th:first-child {
      border-start-start-radius: 0;
    }

    .ht_master:not(.innerBorderTop):not(.innerBorderBottom) {
      thead th.htRowspanBottomLevel,
      & ~ .handsontable thead th.htRowspanBottomLevel {
        border-bottom-width: 0;
      }
    }

    thead th.hiddenHeader:not(:first-of-type) {
      display: none;
    }

    thead th.hiddenHeaderText {
      .colHeader {
        opacity: 0;
      }
    }
  }
}

